HUE-8058 [dashboard] Prevent adding extra space when placing a Gridster widget

--- a/desktop/core/src/desktop/static/desktop/less/components/hue-gridster.less
+++ b/desktop/core/src/desktop/static/desktop/less/components/hue-gridster.less
@@ -16,8 +16,6 @@
  limitations under the License.
 */
 
-
-
 .gridster {
   & > ul {
     margin: 0;
@@ -96,5 +94,15 @@
 
   .empty-gridster-widget {
     height: 215px;
+  }
+
+  .gridster-helper {
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 30px;
+    background-color: @cui-white;
+    border: 1px solid @cui-gray-100;
+    color: @cui-gray-400;
+    padding: 10px;
   }
 }
